[package]
name = "phobos"
version = "0.3.3"
edition = "2021"
license = "Apache-2.0"
description = "Fast, powerful Vulkan abstraction library"
repository = "https://github.com/NotAPenguin0/phobos-rs"
readme = "README.md"

[dependencies]
ash = { version = "0.37.0", features = ["debug"] }
ash-window = "0.12.0"
raw-window-handle = "0.5.0"
gpu-allocator = "0.22.0"
smallvec = "1.10.0"
derivative = "2.2.0"
futures = "0.3.25"
petgraph = "0.6.2"
layout-rs = "0.1.1"
winit = { version = "0.28.1", optional = true }
bitflags = "1.3.2"
dyn-clone = "1.0.10"
anyhow = { version = "1.0.69", features = ["backtrace"] }
thiserror = "1.0.38"
spirv_cross = { version = "0.23.1", optional = true, features = ["glsl"] }

[build-dependencies]
shaderc = { version = "0.8.2", optional = true, features = ["build-from-source"] }

[features]
default = ["winit", "debug-markers", "shader-reflection"]
# Logs creation and destruction of all Vulkan objects. Useful for debugging.
log-objects = []
# Automatically insert debug markers at pass begin and end.
debug-markers = []
# Allow using shader reflecting using SPIRV-Cross to automatically fill out
# pipeline layout information.
shader-reflection = ["dep:spirv_cross"]
shaderc = ["dep:shaderc"]

# compile winit with max optimizations
[profile.dev.package.winit]
opt-level = 3