[package]
name = "phobos"
version = "0.7.2"
edition = "2021"
license = "Apache-2.0"
description = "Fast, powerful Vulkan abstraction library"
repository = "https://github.com/NotAPenguin0/phobos-rs"
readme = "README.md"
keywords = ["graphics", "vulkan"]
categories = ["graphics"]

[dependencies]
ash = { version = "0.37.0", features = ["debug"] }
ash-window = "0.12.0"
raw-window-handle = "0.5.0"
gpu-allocator = "0.22.0"
derivative = "2.2.0"
futures = "0.3.25"
petgraph = "0.6.2"
layout-rs = "0.1.1"
winit = { version = "0.28.1", optional = true }
anyhow = { version = "1.0.69", features = ["backtrace"] }
thiserror = "1.0.38"
spv-cross = { version = "0.23.2", optional = true, features = ["glsl", "hlsl"] }
log = "0.4.17"
rayon = { version = "1.7.0", optional = true }
static_assertions = "1.1.0"

[build-dependencies]
shaderc = { version = "0.8.2", optional = true, features = ["build-from-source"] }

[dev-dependencies]
pretty_env_logger = "0.4.0"
glam = "0.23.0"

[features]
default = ["winit", "debug-markers", "shader-reflection"]
# Logs creation and destruction of all Vulkan objects. Useful for debugging.
log-objects = []
# Automatically insert debug markers at pass begin and end.
debug-markers = []
# Allow using shader reflecting using SPIRV-Cross to automatically fill out
# pipeline layout information.
shader-reflection = ["dep:spv-cross"]
shaderc = ["dep:shaderc"]
# Use hlsl instead of glsl for shader reflection
hlsl = []
rayon = ["dep:rayon"]
